GNOME Bugzilla – Bug 728418
matroskamux: Small memory leak
Last modified: 2014-05-14 08:28:26 UTC
Created attachment 274601 [details] [review] Patch to fix the memory leak of language attribut The matroskamux leak the attribut language of the trackcontext. See attached patch.
Dropped the if from the patch (g_free already checks for it) and pushed the patch, thanks! master: commit 8ac30d4c260dc9b40be5a84de28b0a0fe68e6a8c Author: Adrien SCH <adrien.schwartzentruber@gmail.com> Date: Thu Apr 17 13:04:00 2014 +0000 matroskamux: fix the memory leak of language attribute https://bugzilla.gnome.org/show_bug.cgi?id=728418 1.2: commit ef6850d2fcb54834a043fed4b9274dc8f2ba5b70 Author: Adrien SCH <adrien.schwartzentruber@gmail.com> Date: Thu Apr 17 13:04:00 2014 +0000 matroskamux: fix the memory leak of language attribute https://bugzilla.gnome.org/show_bug.cgi?id=728418