matroskamux: fix the memory leak of language attribute

https://bugzilla.gnome.org/show_bug.cgi?id=728418