gst/matroska/matroska-mux.c
@@ -809,6 +809,7 @@ gst_matroska_mux_handle_sink_event (GstCollectPads * pads,
         lang_code = gst_tag_get_language_code_iso_639_2B (lang);
         if (lang_code) {
           GST_INFO_OBJECT (pad, "Setting language to '%s'", lang_code);
+          g_free (context->language);
           context->language = g_strdup (lang_code);
         } else {
           GST_WARNING_OBJECT (pad, "Did not get language code for '%s'", lang);
